Add comprehensive AI request/response logging system
- Add AILogger class with human-readable log format
- Integrate logging into all AI providers (Anthropic, OpenAI, Gemini)
- Track requests, responses, errors, and character limit retries
- Session-based log files with timestamps
- UTF-8 support for international characters
- Exclude logs directory from git repository
- Fix permission issues for log file creation

--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,7 @@ config/api_keys.json
 # AI development files (keep local only)
 CLAUDE.md
 .claude/
+logs/
 
 # Generated config files
 config/providers.json
