Add comprehensive localization export feature with timestamped backups
- Add new Export Localizations mode to main menu (option 6)
- Implement export_existing_localizations function with complete data backup
- Support both latest version and specific version selection
- Combine version localizations with app info localizations (name/subtitle)
- Generate timestamped files: {appname}_{appid}_{version}_{timestamp}.txt
- Include full content without truncation for complete backup capability
- Add existing_localizations/ directory to .gitignore for data privacy
- Export files contain all localization fields with proper formatting
- Support version-specific exports for rollback and comparison purposes

--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,9 @@ CLAUDE.md
 .claude/
 logs/
 
+# Export files (contain sensitive app data)
+existing_localizations/
+
 # Generated config files
 config/providers.json
 config/instructions.txt
